# Game

./: .gitignore  CMakeLists.txt  idea.txt
src/: camera.cpp  enemy.cpp  main.cpp  map.cpp  player.cpp
src/include/: camera.hpp  enemy.hpp  game.hpp  map.hpp  player.hpp  screen.hpp  types.hpp
